--- a/static web 001.html
+++ b/static web 001.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Personal Blog</title>
+  <title>My Personal Portfolio</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -52,13 +52,13 @@
   </style>
 </head>
 <body>
-  <header>Hey there! Welcome to My Blog</header>
+  <header>Hey there! Welcome to My Portfolio</header>
   <main>
     <p>Hi! I'm a university student passionate about web development and sharing my thoughts.</p>
     <p>Here you'll find my blog posts on technology, coding, and life as a student.</p>
 
     <section>
-      <h2>Latest Blog Posts</h2>
+      <h2>Latest works</h2>
       <article>
         <h3>Why I Love Coding</h3>
         <p>Coding is not just about writing lines of code, but about solving problems and bringing ideas to life. In this post, I share why coding excites me and how I got started.</p>
